--- a/styling/contact.css
+++ b/styling/contact.css
@@ -1,106 +1,34 @@
-body,h1,h2,h3,p,quote,small,form,input,ul,li,ol,label{
-	margin:0px;
-	padding:0px;
+form#contact label {
+  display: inline-block;
+  font-size: 1.2em;
+  margin-bottom: 9px;
 }
-
-body{
-	color:#555555;
-	font-size:13px;
-	background: url(img/dark_wood_texture.jpg) #282828;
-	font-family:Arial, Helvetica, sans-serif;
+form#contact .alert {
+  display: inline-block;
+  margin-left: 9px;
 }
-
-.clear{
-	clear:both;
+form#contact input {
+  border: 1px solid #b8b8b8;
+  display: block;
+  margin: 0 0 9px;
+  padding: 12px;
+  width: 100%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
-
-#main-container{
-	width:400px;
-	margin:30px auto;
+form#contact textarea {
+  border: 1px solid #b8b8b8;
+  margin: 0 0 18px 0;
+  padding: 12px;
+  resize: vertical;
+  width: 100%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
-
-#form-container{
-	background-color:#f5f5f5;
-	padding:15px;
-	
-	-moz-border-radius:12px;
-	-khtml-border-radius: 12px;
-	-webkit-border-radius: 12px;
-	border-radius:12px;
+form#contact .error {
+  border-color: #8d2121;
 }
-
-td{
-	white-space:nowrap;
-}
-
-a, a:visited {
-	color:#00BBFF;
-	text-decoration:none;
-	outline:none;
-}
-
-a:hover{
-	text-decoration:underline;
-}
-
-h1{
-	color:#777777;
-	font-size:22px;
-	font-weight:normal;
-	text-transform:uppercase;
-	margin-bottom:5px;
-}
-
-h2{
-	font-weight:normal;
-	font-size:10px;
-	
-	text-transform:uppercase;
-	
-	color:#aaaaaa;
-	margin-bottom:15px;
-	
-	border-bottom:1px solid #eeeeee;
-	margin-bottom:15px;
-	padding-bottom:10px;
-}
-
-label{
-	text-transform:uppercase;
-	font-size:10px;
-	font-family:Tahoma,Arial,Sans-serif;
-}
-
-textarea{
-	color:#404040;
-	font-family:Arial,Helvetica,sans-serif;
-	font-size:12px;
-}
-
-td > button{
-	text-indent:8px;
-}
-
-.error{
-	background-color:#AB0000;
-	color:white;
-	font-size:10px;
-	font-weight:bold;
-	margin-top:10px;
-	padding:10px;
-	text-transform:uppercase;
-	width:240px;
-}
-
-#loading{
-	position:relative;
-	bottom:9px;
-	visibility:hidden;
-}
-
-.tutorial-info{
-	color:white;
-	text-align:center;
-	padding:10px;
-	margin-top:10px;
-}
+form#contact #sender-info {
+  width: 50%;
