--- a/styling/stylesheet-desktop.css
+++ b/styling/stylesheet-desktop.css
@@ -100,7 +100,6 @@ div .right {
 
 #header {
 	margin: 0 auto;
-	height: 100%;
 	position: relative;
 	top: 30px;
 	width: 100%;
@@ -175,7 +174,7 @@ div .right {
 }
 
 #navBar {
-	background: #FFF;
+	background: rgba(255,255,255,0.75);
 	font-size: 16px;
 	font-weight: bold;
 	height: 55px;
