--- a/cv/styling/desktop-cv.css
+++ b/cv/styling/desktop-cv.css
@@ -90,7 +90,7 @@ body {
 }
 
 #navBar {
-	background: #FFF;
+	background: rgba(255,255,255,0.95);
 	font-size: 16px;
 	font-weight: bold;
 	height: 55px;
