--- a/styling/stylesheet.css
+++ b/styling/stylesheet.css
@@ -1,11 +1,16 @@
 body {
-	background: #CCC;
+	background: #282828;
 	color: #282828;
 	font-family: "Arial";
 	font-size: 20px;
 	margin: 0;
 	overflow-x: hidden;
 	padding: 0;
+}
+
+div .center {
+	margin: 0 auto;
+	position: relative;
 }
 
 div .left {
@@ -30,8 +35,13 @@ div .right {
 	width: 75%;
 }
 
+#content .center {
+	margin: 0 auto;
+}
+
+
 #content > div {
-	background: rgba(255,255,255,0.95);
+	background: rgba(255,255,255,0.99);
 	overflow: hidden;
 	position: relative;
 }
@@ -49,10 +59,31 @@ div .right {
 	width: 100%;
 }
 
+#content > h1 {
+	background: #282828;
+
+	-moz-box-shadow:    inset 0 0 25px rgba(0,0,0,0.5);
+	-webkit-box-shadow: inset 0 0 25px rgba(0,0,0,0.5);
+	box-shadow:         inset 0 0 25px rgba(0,0,0,0.5);
+
+	color: #FFF;
+	height: 175px;
+	line-height: 175px;
+	margin: 0;
+	position: relative;
+	text-align: center;
+	width: 100%;
+}
+
+#content #titleDecor {	
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
 #content_bio, #content_more, #content_contact {
 	clear: both;
+	padding-top: 20px;
 	position: inherit;
-	margin-bottom: 20px;
 }
 
 #content_more > div, #content_contact > div {
@@ -91,11 +122,16 @@ div .right {
 #content_bio_right_pic {
 	display: block;
 
+	margin-top: 40px;
 	max-height: 100%;
 	max-width: 100%;
 
 	height: auto;
 	width: auto;
+}
+
+#content_contact #contactForm {
+	width: 50%;
 }
 
 #header {
@@ -151,7 +187,7 @@ div .right {
 	color: #151515;
 }
 
-#modalQuote > div {
+#GetAQuote > div {
 	background: #303030;
 
 	border-bottom: 2px solid #202020;
@@ -169,12 +205,12 @@ div .right {
 	width: 700px;
 }
 
-#modalQuote > div > div {
+#GetAQuote > div > div {
 	padding: 25px;
 }
 
 #navBar {
-	background: rgba(255,255,255,0.95);
+	background: rgba(255,255,255,0.99);
 	font-size: 16px;
 	font-weight: bold;
 	height: 55px;
@@ -250,11 +286,6 @@ div .right {
 	padding-right: 15px;
 	text-align: left;
 	width: 175px;
-}
-
-#navBar #titleDecor {	
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
 }
 
 #navBar ul {
